# hello-django

./: pyproject.toml
src/: manage.py
src/hii/: asgi.py  settings.py  urls.py  wsgi.py
src/polls/: models.py  views.py
src/polls/migrations/: 0001_initial.py
src/polls/templates/polls/: detail.html
