[tool.poetry]
name = "hello-django"
version = "0.1.0"
description = ""
authors = ["zero88 <sontt246@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "3.2"

[tool.poetry.dev-dependencies]
pytest = "^7.0.0"
python-dotenv = "^0.19.2"
pytest-dotenv = "^0.5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
